removed fork on github, fixed follow ribbon on mobile. chnaged the secondary navbar to be fixed

--- a/source/assets/stylesheets/scss/_footer.scss
+++ b/source/assets/stylesheets/scss/_footer.scss
@@ -84,13 +84,16 @@ footer {
 
 	li {
 		display: inline-block;
-		padding: 0 10px;
 		transform: scale(1.1);
 		cursor: pointer;
-
-		@media (min-width:$screen-tablet) {
+		padding: 0 10px;
+		margin: 10px;
+	
+		@media (max-width:$screen-tablet) {
 			border-right: 1px solid #212121;
-			padding: 0 50px;
+		}
+		@media (min-width: 320px) and(max-width: 562px){
+			margin: 0;
 		}
 
 		&:first-child {
@@ -127,11 +130,8 @@ footer {
 		margin: 0 auto 10px;
 		transition: all .2s ease-in-out;
 		width: auto;
-		// height: 30px;
+
 		color: #00BFC0;
-		@media (min-width:$screen-tablet) {
-			// height: 56px;
-		}
 		&:hover {
 			transform: scale(1.1);
 		}
@@ -140,15 +140,24 @@ footer {
 
 	span{
 		padding-left: 15px;
-	}
+
+		@media (max-width: $screen-desktop){
+			display: block;
+		}
+		@media (min-width: 320px) and (max-width: 562px){
+			padding: 0;
+		}
+	} 
 }
 
 .fa-4x{
-font-size:2em;
-@media (min-width:$screen-tablet) {
 	font-size:2em;
-}	
+
+	@media (min-width:$screen-tablet) {
+		font-size:2em;
+	}	
 }
+
 .help-us-improve {
 	a {
 		background: #fff;
